LibLoad and physic (Game engine) Blender 2.64a #33187

Closed
opened 2012-11-15 17:46:08 +01:00 by pablo aaa · 11 comments

Category: Physics

%%%In the first .blend I have a character. Play P and:

[IMG]http://i46.tinypic.com/34hwb51.gif[/IMG]

(reds cube are character's physic objects)

In another .blend that it is empty I load 2 scenes with

[CODE]import bge

bge.logic.LibLoad("//prueba_escenario.blend", "Scene")
bge.logic.LibLoad("//modelos/personajes/base_personaje_10015.blend", "Scene")[/CODE]

Press P and:

[IMG]http://i49.tinypic.com/2poe9a1.gif[/IMG]

Some cubes down and cross the plane. Why happen this? Why the physic is different?
%%%

**Category**: Physics %%%In the first .blend I have a character. Play P and: [IMG]http://i46.tinypic.com/34hwb51.gif[/IMG] (reds cube are character's physic objects) In another .blend that it is empty I load 2 scenes with [CODE]import bge bge.logic.LibLoad("//prueba_escenario.blend", "Scene") bge.logic.LibLoad("//modelos/personajes/base_personaje_10015.blend", "Scene")[/CODE] Press P and: [IMG]http://i49.tinypic.com/2poe9a1.gif[/IMG] Some cubes down and cross the plane. Why happen this? Why the physic is different? %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author
%%%To see it best visit this link http://blenderartists.org/forum/showthread.php?272417-LibLoad-and-physic%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%Moving to game engine tracker.

Pablo, instead of attaching animated gif and linking to forums it's much more helpful and much less time-consuming if reporter himself attaches simple .blend file which demonstrates the issue. Bug tracker is more about collaboration between user who've got issue and developers who're are limited in amount and time.%%%

%%%Moving to game engine tracker. Pablo, instead of attaching animated gif and linking to forums it's much more helpful and much less time-consuming if reporter himself attaches simple .blend file which demonstrates the issue. Bug tracker is more about collaboration between user who've got issue and developers who're are limited in amount and time.%%%

%%%Uploading an attachment from a duplicate report.

I also wonder if this patch fixes this bug: http://projects.blender.org/tracker/index.php?func=detail&aid=31443&group_id=9&atid=127%%%

%%%Uploading an attachment from a duplicate report. I also wonder if this patch fixes this bug: http://projects.blender.org/tracker/index.php?func=detail&aid=31443&group_id=9&atid=127%%%
Author

%%%I tested the patch but I can't build blender. The most probably is that I am doing something wrong. My make error is:

CMake Error: The following variables are used in this project, but they are set to NOTFOUND.
Please set them or make sure they are set and tested correctly in the CMake files:
/home/p9ablo/blender-2.64a/blender/extern/carve/Boost_INCLUDE_DIR

 used as include directory in directory /home/p9ablo/blender-2.64a/blender/extern/carve

/home/p9ablo/blender-2.64a/blender/intern/audaspace/Boost_INCLUDE_DIR

 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/audaspace

/home/p9ablo/blender-2.64a/blender/intern/bsp/Boost_INCLUDE_DIR

 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/bsp

/home/p9ablo/blender-2.64a/blender/intern/locale/Boost_INCLUDE_DIR

 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/locale

/home/p9ablo/blender-2.64a/blender/source/gameengine/BlenderRoutines/Boost_INCLUDE_DIR

 used as include directory in directory /home/p9ablo/blender-2.64a/blender/source/gameengine/BlenderRoutines

/home/p9ablo/blender-2.64a/blender/source/gameengine/Converter/Boost_INCLUDE_DIR

 used as include directory in directory /home/p9ablo/blender-2.64a/blender/source/gameengine/Converter

/home/p9ablo/blender-2.64a/blender/source/gameengine/Ketsji/Boost_INCLUDE_DIR

 used as include directory in directory /home/p9ablo/blender-2.64a/blender/source/gameengine/Ketsji

Boost_INCLUDE_DIR (ADVANCED)

 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles
 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/blender
 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/bvh
 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/device
 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/doc
 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/doc/license
 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/kernel
 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/render
 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/subd
 used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/util
  • Configuring incomplete, errors occurred!
    make: *** [all] Error 1

%%%

%%%I tested the patch but I can't build blender. The most probably is that I am doing something wrong. My make error is: CMake Error: The following variables are used in this project, but they are set to NOTFOUND. Please set them or make sure they are set and tested correctly in the CMake files: /home/p9ablo/blender-2.64a/blender/extern/carve/Boost_INCLUDE_DIR ``` used as include directory in directory /home/p9ablo/blender-2.64a/blender/extern/carve ``` /home/p9ablo/blender-2.64a/blender/intern/audaspace/Boost_INCLUDE_DIR ``` used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/audaspace ``` /home/p9ablo/blender-2.64a/blender/intern/bsp/Boost_INCLUDE_DIR ``` used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/bsp ``` /home/p9ablo/blender-2.64a/blender/intern/locale/Boost_INCLUDE_DIR ``` used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/locale ``` /home/p9ablo/blender-2.64a/blender/source/gameengine/BlenderRoutines/Boost_INCLUDE_DIR ``` used as include directory in directory /home/p9ablo/blender-2.64a/blender/source/gameengine/BlenderRoutines ``` /home/p9ablo/blender-2.64a/blender/source/gameengine/Converter/Boost_INCLUDE_DIR ``` used as include directory in directory /home/p9ablo/blender-2.64a/blender/source/gameengine/Converter ``` /home/p9ablo/blender-2.64a/blender/source/gameengine/Ketsji/Boost_INCLUDE_DIR ``` used as include directory in directory /home/p9ablo/blender-2.64a/blender/source/gameengine/Ketsji ``` Boost_INCLUDE_DIR (ADVANCED) ``` used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/blender used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/bvh used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/device used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/doc used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/doc/license used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/kernel used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/render used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/subd used as include directory in directory /home/p9ablo/blender-2.64a/blender/intern/cycles/util ``` - Configuring incomplete, errors occurred! make: *** [all] Error 1 %%%

%%%Sounds like you're missing Boost as a dependency.%%%

%%%Sounds like you're missing Boost as a dependency.%%%
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

I just checked and the patch from #31443 (already committed) doesn't fix the bug. It seems that the contraints are not loaded when we use libload.

I just checked and the patch from #31443 (already committed) doesn't fix the bug. It seems that the contraints are not loaded when we use libload.

This issue was referenced by bccc6c393c

This issue was referenced by bccc6c393c70cc6466f044917348fb50d43ef021

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33187
No description provided.