BGE: Fix T33187 constraints replication for libloaded objects.

Reviewers: Moguri